--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>codigo-fonte-sprint2</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <packaging>war</packaging>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -39,6 +40,11 @@
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
             <version>2.35</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.0</version>
         </dependency>
     </dependencies>
     <build>
